--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,11 +1,10 @@
 source 'https://github.com/CocoaPods/Specs.git'
 use_frameworks!
 
+target 'C2Call-SDK_Example' do
+  pod "C2Call-SDK", :path => "../"
 
-target 'C2Call-SDK_Example', :exclusive => true do
-    pod "C2Call-SDK", :path => "../"
-end
-
-target 'C2Call-SDK_Tests', :exclusive => true do
-    pod "C2Call-SDK", :path => "../"
+  target 'C2Call-SDK_Tests' do
+    inherit! :search_paths
+  end
 end
