--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,10 +1,8 @@
 source 'https://github.com/CocoaPods/Specs.git'
 use_frameworks!
+platform :ios, '9.0'
 
 target 'C2Call-SDK_Example' do
   pod "C2Call-SDK", :path => "../"
 
-  target 'C2Call-SDK_Tests' do
-    inherit! :search_paths
-  end
 end
